# QTrend_v2

./: .gitignore  README.md  pyproject.toml
data/: bias_windows.csv
docs/: CHANGELOG.md
docs/research/: 2026-05-11-indicator-frequency-research.md
docs/superpowers/plans/: 2026-05-11-qtrend-v2-implementation.md
docs/superpowers/specs/: 2026-05-11-qtrend-v2-design.md
notebooks/: 2026-05-11-v1-walkthrough.ipynb
scripts/: demo_alphaforge_2024_window.py  demo_alphaforge_report.py  demo_report_with_excel.py
src/qtrend_v2/: __init__.py  backtest.py  bias.py  data.py  report.py  report_af.py  sizing.py  state_machine.py  strategy.py  types.py
src/qtrend_v2/execution/: __init__.py  simulator.py
src/qtrend_v2/forecast/: __init__.py  base.py  ewmac.py
src/qtrend_v2/pullback/: __init__.py  connors.py
tests/: conftest.py  test_backtest.py  test_backtest_smoke.py  test_bias.py  test_data.py  test_forecast_ewmac.py  test_pullback.py  test_report.py  test_report_af.py  test_simulator.py  test_sizing.py  test_state_machine.py  test_strategy.py  test_types_smoke.py
